static/css/style.css
/* Google font import link */
@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Raleway:wght@200;500&display=swap');

/* General styling */
html {
    font-size: 62.5%;
    position: relative;
    min-height: 100vh;
    scroll-behavior: smooth;
}

body {
    font-size: 2rem;
    font-family: "Raleway", sans-serif;
    color: #f8f8ff;
    overflow-x: hidden;
    overflow-y: hidden;
}

.title {
    color:#bc5609;
    text-align: center;
    font-size: 3rem;
    font-family: 'Indie Flower', cursive;
}

/* Card styling */
.card {
    margin-left: 2rem;
    margin-right: 2rem;
}

.card-header-title {
    color:#bc5609;
    text-align: center;
    font-size: 2.5rem;
    font-family: 'Indie Flower', cursive;
}

.fas {
    color: #5f2121;
    margin-top: 1rem;
    margin-left: 1rem;
}

a {
    color: #5f2121
}

.page-title {
    color:#bc5609;
    text-align: center;
    font-size: 5rem;
    font-family: 'Indie Flower', cursive;
    margin-left: 1rem;
}

.author-title,
.date,
.content-title {
    color: #5f2121;
}

/* Navbar styling */
.navbar-item img {
    max-height: 5.75rem;
}

/* Hero header styling */
.hero.is-info,
.hero.is-info a.navbar-item.is-active,
.hero.is-info a.navbar-item:hover,
.hero.is-info .navbar-item   {
    color: #bc5609;
    background-color: transparent;
}

.hero.is-info {
    background-image: url("../../../static/images/hero-header.jpg");
    height: 55vh;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.hero .navbar {
    background: rgba(248, 248, 255, 0.7);
}

.navbar-burger {
    margin-top: 1.5rem;
}

/* Buttons */
.button {
    font-size: 2rem;;
}

.button.is-info.is-inverted {
    background-color: #5f2121;
    color: #f8f8ff;
}

.button.is-info.is-inverted.is-hovered, 
.button.is-info.is-inverted:hover {
    background-color: #bc5609
}

#join-button {
    text-align: center;
}

/* About on home page */
#about {
    color: #000;
}

/* Authentication */
.registration {
    margin-left: 2rem;
    margin-bottom: 2rem;
}

.link {
    color: #5f2121;
    text-decoration: underline;
}
/* List styling */
.content ol {
    list-style-position: inside;
    margin-right: 2em;
}

/* Flash Messages styling */
.flashes {
    color: #5f2121;
}

/* Profile Styling */
#account-settings {
    background-color: #fff;
    border-radius: .25rem;
    box-shadow: 0 0.5em 1em -0.125em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);
    color: #4a4a4a;
    max-width: 100%;
    overflow: hidden;
    position: relative;
}

.change-username,
.change-password,
.delete-account {
    color: #5f2121;
    background-color: #bc5609;
}

.profile-story-header {
    color: #5f2121;
    text-align: center;
    font-size: 3.5rem;
    font-family: 'Indie Flower', cursive;
}

.profile-story-box {
    border-top: 1px dotted #5f2121;
    border-left: 1px dotted #5f2121;
}

#profile {
    background-color: #5f2121;
    color: #bc5609;
}

.is-horizontal-center {
    justify-content: center;
}

/* For forms */
.label {
    color: #5f2121;
    display: block;
    font-size: 1.5rem;
    font-weight: 700;
}

.field:not(:last-child) {
    margin-bottom: 2rem;
    margin-left: 1rem;
    margin-right: 1rem;
}

.help {
    font-size: 1.25rem;
    margin-top: .75rem;
    color: #000000;
}

.control {
    text-align: center;
}

.control.has-icons-left .icon, .control.has-icons-right .icon {
    height: 1.5rem;
}

/* Footer */
#footer {
    color: #5f2121;
    font-size: 3rem;
    font-family: 'Indie Flower', cursive;
    background-color: #fff;
    padding: 3rem 1.5rem 2rem;
}

/* Modal */
.modal {
    display: none;
}

.modal-card-body {
    color: #5f2121;
    font-size: 3rem;
}

.cancel {
    display: block;
    flex-basis: 0;
    flex-grow: 1;
    flex-shrink: 1;
    padding: .75rem;
    margin-top: -1.5rem;
    margin-left: 1rem;
}

/* Flash messages */
.flashes {
    color: #5f2121;
    background-color: #bc57093f;
    text-justify: center;
}

/* Styling for error pages */
.error {
    background-color: #5f2121;
    background-image: url("../../../static/images/errorbackground.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.error-title {
    color: #bc5609;
    font-size: 20rem;
    font-family: 'Indie Flower', cursive;
}
.error-subtitle {
    color: #bc5609;
    font-size: 5rem;
    font-family: 'Raleway'
}

/* Media */
@media screen and (max-width: 1023px) {
.hero.is-info .navbar-menu {
    background-color: rgba(248, 248, 255, 0.7);
} }

